Feat: formatting container/boxes

--- a/main.html
+++ b/main.html
@@ -10,20 +10,22 @@
   <body>
     <header class="main header">
       <nav class="main nav">
-        <div class="box">Subscribe</div>
-        <div class="box">Contact</div>
+        <div>Subscribe</div>
+        <div>Contact</div>
       </nav>
       <h1>Schult Photography Blog</h1>
     </header>
 
     <div class="container">
       <div class="box" id="one">
-        <h2>Norway</h2>
-        <p id="typography">
-          Norway is one of the most visually stunning location with landscpaes
-          boasting a wide range of spectacular characteristics. I had the
-          pleasure to visit this place, and I captured my experience through
-          text and photoraphy.
+        <h2>Iceland</h2>
+        <p class="typography">
+          For some reason I have always been drawn to cold places. Perhaps it is
+          the unique atmophere which is created by dark and gloomy landscapes,
+          or perhaps it is the cold air I breathe, which makes me feel sharp and
+          on the edge at all times. I visited Iceland in late winter, and was
+          immersed by its vast spectrum of mountains, waterfalls and natural
+          formations.
         </p>
         <p>
           <a href="blog.html">Continue reading</a>
@@ -32,7 +34,7 @@
 
       <div class="box" id="two">
         <h2>South Africa</h2>
-        <p id="typography">
+        <p class="typography">
           Wonderful people, buzzing biodiversity, mouth-watering cuisine. South
           Africa provides everything your heart wants. Theres is so much to see
           and do, which is why I have already returned, and will do so again in
@@ -45,14 +47,12 @@
       </div>
 
       <div class="box" id="three">
-        <h2>Iceland</h2>
-        <p id="typography">
-          For some reason I have always been drawn to cold places. Perhaps it is
-          the unique atmophere which is created by dark and gloomy landscapes,
-          or perhaps it is the cold air I breathe, which makes me feel sharp and
-          on the edge at all times. I visited Iceland in late winter, and was
-          immersed by its vast spectrum of mountains, waterfalls and natural
-          formations.
+        <h2>Norway</h2>
+        <p class="typography">
+          Norway is one of the most visually stunning location with landscpaes
+          boasting a wide range of spectacular characteristics. I had the
+          pleasure to visit this place, and I captured my experience through
+          text and photoraphy.
         </p>
         <p>
           <a href="blog.html">Continue reading</a>
@@ -60,7 +60,7 @@
       </div>
       <div class="box" id="four">
         <h2>Alaska</h2>
-        <p id="typography">
+        <p class="typography">
           A staggering number of countries are affected by increasing
           overpopulation. When visiting such places, you can feel overwhelmed
           and drowned by the sheer incomprehesible densitive of people
