Feat: Added text to blog

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,15 @@
            and volcanoes, and overal rough landscapes. Especially in winter, when strong winds are
            cutting through your face, leaving your body behind with a numb feeling, yet emotionally
            charged by the wonderful scenes infront of your eyes. At times, it feels like you are at 
-           the edge of the world, far away from everything and everyone.
+           the edge of the world, far away from everything and everyone.<br>
+           If you're lucky and weather conditions/season allows, you will be greeted by the majestic Aurora Borealis. 
+           While I didn't have that luck this time around, I was still very much amazed by the sheer raw beauty Iceland
+           has to offer. It was snowing a lot, with freezing temperatures, which added something very special to the 
+           already spectacular landscapes, shaped by the impeccable forces of mother nature.<br> Walking around with my camera,
+           photographing the stunning scenes in front of my eyes, while being trashed by strong, icy winds and being 
+           surrounded by giant mountain ranges and glaciers made me feel extremely small. At the same time, I gained a strong
+           sense of sharpness and energy, and I felt my mind was as clear as ever.<br> Those are the moments I live for, something
+           I don't experience during my day to day life working my regular job in a bigger city.
           </p>        
 
        <div class="photos-container">
