--- a/main.html
+++ b/main.html
@@ -78,13 +78,14 @@
             I have always been drawn to cold places. Perhaps it is the unique
             atmophere which is created by dark and gloomy landscapes, or perhaps
             it is the cold air I breathe, which makes me feel sharp and on the
-            edge at all times. I visited <u><strong>Iceland</strong></u> in late
-            winter, and was immersed by its vast spectrum of mountains,
-            waterfalls and natural formations. There is so much to see, and
-            everything thrives by its uniquness and raw beauty.
+            edge at all times.<br />
+            I visited <u><strong>Iceland</strong></u> in late winter, and was
+            immersed by its vast spectrum of mountains, waterfalls and natural
+            formations. There is so much to see, and everything thrives by its
+            uniquness and raw beauty.
           </p>
           <section>
-            A fitting <u>quote</u> I stumbled upon once reads as follows:
+            I found this <u>quote</u> quite fitting:
             <blockquote cite="https://www.thetravellingtom.com/iceland-quotes">
               “The problem with driving around Iceland is that you’re basically
               confronted by a new soul-enriching, breath-taking, life-affirming
@@ -139,7 +140,8 @@
             A staggering number of countries are affected by increasing
             overpopulation. When visiting such places, you can feel overwhelmed
             and drowned by the sheer incomprehesible densitive of people
-            surrounging yourself, at times it can be hard to keep a clear head.
+            surrounging yourself, at times it can be hard to keep a clear
+            head.<br />
             <u><strong>Alaska</strong></u> is not one of those place, in
             contrary, it feels like you're alone when travelling through this
             vast country with its untouched nature. Instead, you are immersed by
