Feat: Finalized project, created more style sheets

--- a/blog.html
+++ b/blog.html
@@ -63,8 +63,8 @@
     </header>
 
     <main>
-        <article class="card card-iceland">
-          <h2 class="h1card1">Iceland</h2>
+        <article class="card">
+          <h2 class="card-header">Iceland</h2>
           <div class="card-content">
             <p>
            <u><strong>Iceland</strong></u> certainly is a very unique location. It is defined by waterfalls, glaciers
@@ -100,7 +100,7 @@
 
     <aside>
         <article class="card card-aboutme">
-            <h2>About me</h2>
+            <h2 class="card-header">About me</h2>
             <div class="card-content">
               <p>
                 
