--- a/main.html
+++ b/main.html
@@ -18,7 +18,6 @@
             <button class="open-button" onclick="openForm()">Subscribe</button>
           </li>
         </ul>
-
         <div class="form-popup" id="myForm">
           <form action="/action_page.php" class="form-container">
             <h3><u>Enter details</u></h3>
@@ -45,7 +44,6 @@
             </button>
           </form>
         </div>
-
         <script>
           function openForm() {
             document.getElementById("myForm").style.display = "block";
@@ -55,14 +53,10 @@
             document.getElementById("myForm").style.display = "none";
           }
         </script>
-
         <!-- <button type="button">Subscribe</button> -->
       </div>
       <!--   <div class="box2">
-
-
-      <button type="button">Contact</button> 
-
+      <button type="button">Contact</button>
       </div> -->
 
       <div class="box-title">
@@ -72,7 +66,7 @@
 
     <main>
       <article class="card card-iceland">
-        <h2>Iceland</h2>
+        <h2 class="card-header">Iceland</h2>
         <div class="card-content">
           <p>
             I have always been drawn to cold places. Perhaps it is the unique
@@ -105,7 +99,7 @@
       </article>
 
       <article class="card card-southafrica">
-        <h2>South Africa</h2>
+        <h2 class="card-header">South Africa</h2>
         <div class="card-content">
           <p>
             Wonderful people, buzzing biodiversity, mouth-watering cuisine.
@@ -134,7 +128,7 @@
       </article>
 
       <article class="card card-alaska">
-        <h2>Alaska</h2>
+        <h2 class="card-header">Alaska</h2>
         <div class="card-content">
           <p>
             A staggering number of countries are affected by increasing
@@ -161,7 +155,7 @@
       </article>
 
       <article class="card card-norway">
-        <h2>Norway</h2>
+        <h2 class="card-header">Norway</h2>
         <div class="card-content">
           <p>
             <u><strong>Norway</strong></u> is one of the most visually stunning
