Feat: Added source for popup form

--- a/main.html
+++ b/main.html
@@ -18,6 +18,9 @@
             <button class="open-button" onclick="openForm()">Subscribe</button>
           </li>
         </ul>
+
+        <!--Source of code for popup form: W3Schools (https://www.w3schools.com/howto/howto_js_popup_form.asp)-->
+
         <div class="form-popup" id="myForm">
           <form action="/action_page.php" class="form-container">
             <h3><u>Enter details</u></h3>
