feat: implemented corrections/improvements according to feedback
- added one more block quote (had already used one)
- added directory
- various typography were already being used but I added a couple
- links used
- pages are mobile-friendly

--- a/src/blog.html
+++ b/src/blog.html
@@ -12,13 +12,11 @@
   <body>
     <header>
         <nav class="nav">
-                <a class="navigation-button" href="index.html">Home</a>
-                <a class="navigation-button" href="#contact">Contact</a>
-                <a class="navigation-button active" href="blog.html">Blog</a>
-                <button class="open-button" onclick="openForm()">Subscribe</button>
+                <a class="navigation-button" href="index.html"><b>Home</b></a>
+                <a class="navigation-button" href="#contact"><b>Contact</b></a>
+                <a class="navigation-button active" href="blog.html"><b>Blog</b></a>
+                <button class="open-button" onclick="openForm()"><b>Subscribe</b></button>
         </nav>
-
-
 
         <!--Source of code for popup form: W3Schools (https://www.w3schools.com/howto/howto_js_popup_form.asp)-->
 
@@ -65,7 +63,7 @@
            cutting through your face, leaving your body behind with a numb feeling, yet emotionally
            charged by the wonderful scenes infront of your eyes. At times, it feels like you are at
            the edge of the world, far away from everything and everyone.<br>
-           If you're lucky and weather conditions/season allows, you will be greeted by the majestic Aurora Borealis.
+           If you're lucky and weather conditions/season allows, you will be greeted by the majestic <em><u>Aurora Borealis</u></em>.
            While I didn't have that luck this time around, I was still very much amazed by the sheer raw beauty Iceland
            has to offer. It was snowing a lot, with freezing temperatures, which added something very special to the
            already spectacular landscapes, shaped by the impeccable forces of mother nature.<br> Walking around with my camera,
@@ -73,6 +71,12 @@
            surrounded by giant mountain ranges and glaciers made me feel extremely small. At the same time, I gained a strong
            sense of sharpness and energy, and I felt my mind was as clear as ever.<br> Those are the moments I live for, something
            I don't experience during my day to day life working my regular job in a bigger city.
+           <section>
+           In the words of Harry Gruyaert, which couldn't be more true to myself:
+           <blockquote cite="https://www.naturettl.com/inspirational-quotes-for-photographers/">
+            “I think of photography like therapy.”
+          </blockquote>
+        </section>
           </p>
           </div>
        <div class="photos-container">
@@ -96,9 +100,7 @@
             <h2 class="card-header">About me</h2>
             <div class="card-content">
               <p>
-
                 <div class="avatar"></div>
-
                 <ul class="about-me-list">
                     <li>Lukas Schult</li>
                     <li>BSc Marine Biology</li>
@@ -114,8 +116,6 @@
             </p>
             </div>
     </aside>
-
-
 
     <footer>
          <h3>Follow Me:</h3>
