--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
     <header>
       <div>
         <nav class="nav">
-          <a class="navigation-button active" href="index.html">Home</a>
-          <a class="navigation-button" href="#contact">Contact</a>
-          <a class="navigation-button" href="blog.html">Blog</a>
-          <button class="open-button" onclick="openForm()">Subscribe</button>
+          <a class="navigation-button active" href="index.html"><b>Home</b></a>
+          <a class="navigation-button" href="#contact"><b>Contact</b></a>
+          <a class="navigation-button" href="blog.html"><b>Blog</b></a>
+          <button class="open-button" onclick="openForm()">
+            <b>Subscribe</b>
+          </button>
         </nav>
 
         <!--Source of code for popup form: W3Schools (https://www.w3schools.com/howto/howto_js_popup_form.asp)-->
@@ -130,7 +132,7 @@
             contrary, it feels like you're alone when travelling through this
             vast country with its untouched nature. Instead, you are immersed by
             it's inhabitants such as moose or bears. A pristine location, that
-            allows you to think of life in a different way.
+            makes you to think of life in a different way.
           </p>
           <p>
             <a href="blog.html"><em>Continue reading</em></a>
@@ -148,17 +150,17 @@
         <h2 class="card-header">Norway</h2>
         <div class="card-content">
           <p>
-            <u><strong>Norway</strong></u> is one of the most visually stunning
-            locations with landscpaes boasting a wide range of spectacular
-            characteristics. I had the pleasure to visit this place, and I was
-            hoping for the right conditions to encounter the majestic, beautiful
-            aurora borealis. I should not be dissapointed, we had clear skies
-            for most of the trip and I was immersed by intense displays of
-            colour bands, dancing and wiggling along the nihght skies. Surely, a
-            spectacle I will never forget.
+            <u><strong>Norway</strong></u> has to be one of the most visually
+            stunning locations with landscpaes boasting a wide range of
+            spectacular characteristics. I had the pleasure to visit this place,
+            and I was hoping for the right conditions to encounter the majestic,
+            beautiful aurora borealis. I should not be dissapointed, we had
+            clear skies for most of the trip and I was immersed by intense
+            displays of colour bands, dancing and wiggling along the nihght
+            skies. Surely, a spectacle I will never forget.
           </p>
           <p>
-            <a href="pages/blog.html"><em>Continue reading</em></a>
+            <a href="blog.html"><em>Continue reading</em></a>
           </p>
           <div class="photos-container">
             <figure>
